fix: rating star on hover not aligning

--- a/bookworm/static/css/style.css
+++ b/bookworm/static/css/style.css
@@ -137,7 +137,7 @@ h5, h6 {
 .rating {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .rating>input {
@@ -161,9 +161,6 @@ h5, h6 {
 
 .rating>label:hover:before,
 .rating>label:hover~label:before {
-    width: 100%;
-    left: 2.5px;
-    font-size:32px;
     opacity: 1 !important;
 }
 
